.config/k8s/influx.yml
apiVersion: v1
kind: Service
metadata:
  name: influx-v3
spec:
  ports:
    - port: 8181
  selector:
    app: influx-v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influx-v3
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: influx-v3
  template:
    metadata:
      labels:
        app: influx-v3
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        doks.digitalocean.com/node-pool: influx-v3
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: influx-v3
          image: ghcr.io/vatsim-radar/vatsim-radar/influx-v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8181
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
            limits:
              cpu: 1800m
              memory: 3800Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 30
            timeoutSeconds: 15
          volumeMounts:
            - name: influx-data-v3
              mountPath: /tmp/influxdb3
      volumes:
        - name: influx-data-v3
          persistentVolumeClaim:
            claimName: radar-influx-v3
