.config/k8s/navigraph.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navigraph
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navigraph
  template:
    metadata:
      labels:
        app: navigraph
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      nodeSelector:
        doks.digitalocean.com/node-pool: navigraph
      containers:
        - name: navigraph
          image: ghcr.io/vatsim-radar/vatsim-radar/next
          imagePullPolicy: Always
          command: ["/radar/.config/navigraph.sh"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 600m
              memory: 300Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 30
            timeoutSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: navigraph
spec:
  ports:
    - port: 3000
  selector:
    app: navigraph
