.config/k8s/questdb.yml
apiVersion: v1
kind: Service
metadata:
  name: questdb
spec:
  ports:
    - name: http
      port: 9000
    - name: ilp
      port: 9009
    - name: pg-wire
      port: 8812
    - name: health
      port: 9003
  selector:
    app: questdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questdb
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: questdb
  template:
    metadata:
      labels:
        app: questdb
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: questdb
      containers:
        - name: questdb
          image: questdb/questdb:9.4.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
            - containerPort: 9009
            - containerPort: 8812
            - containerPort: 9003
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
            limits:
              cpu: 1600m
              memory: 3600Mi
          readinessProbe:
            httpGet:
              path: /status
              port: 9003
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 30
            timeoutSeconds: 15
          volumeMounts:
            - name: questdb-data
              mountPath: /var/lib/questdb
      volumes:
        - name: questdb-data
          persistentVolumeClaim:
            claimName: radar-questdb
